--- a/lib/src/dashboard_component/setting_component/setting_component.html
+++ b/lib/src/dashboard_component/setting_component/setting_component.html
@@ -67,6 +67,7 @@
         </div>
     </div>
 </div>-->
+<alert [alert]="setAlert" *ngIf="setAlert != null"></alert>
 <div class="m-0 p-0 w-100">
     <div class="row m-0 my-3 p-0">
         <div class="col-8 col-md-6 m-auto text-center">
